--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
       "title": "VS Code Sessionizer",
       "properties": {
         "sessionizer.sessionRoots": {
-          "description": "The root directories of sessions, for example: [\"~/Desktop/projects\", \"~/Desktop/work\"]",
+          "description": "The root directories of sessions, for example: [\"~/Desktop/projects\", \"~/Desktop/work\", \"/Users/workspace/*\"]",
           "type": "array",
           "items": {
             "type": "string"
@@ -46,11 +46,15 @@
     "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
+    "@types/glob": "^8.1.0",
     "@types/node": "^16.18.34",
     "@types/vscode": "^1.73.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.26.0",
     "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "glob": "^11.0.3"
   }
 }
