--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "lint": "eslint \"src/**/*.ts\"",
-    "watch": "tsc -watch -p ./"
+    "watch": "tsc -watch -p ./",
+    "build": "npm run compile && npx @vscode/vsce package  && cursor --install-extension $(ls -t *.vsix | head -1)"
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
